--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ security.jwt.expiration-minutes = 30
 
 security.jwt.secret-key = dGhpcyBpcyBteSBzZWN1cmUga2V5IGFuZCB5b3UgY2Fubm90IGhhY2sgaXQ=
 
+spring.security.user.name=user
+spring.security.user.password=pass
 
 server.servlet.context-path=/api
 
